[package]
name = "js_runtime"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
v8 = "0.33.0"
structopt = "0.3.25"
swc = "0.83.0"
swc_common = { version = "0.14.5", features = ["tty-emitter", "sourcemap"] }
swc_ecma_parser = "0.77.0"